--- a/mail.html
+++ b/mail.html
@@ -2,9 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Annyang!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>FoodOs</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <style>
+        body {
+            height: 100%;
+            width: 100%;
+            background-color: #ffffff;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,17 +27,27 @@
             console.log("We have annyang!");
 
             var commands = {
-                'Hello': hello,
-                'What is your name': myname
+                'Welcome': welcome,
+                'What is your name': myname,
+                'Calculate :month': calculateStats,
             }
 
-            function hello() {
+            function welcome1() {
+                var randomIndex = Math.round(Math.random() * messages.length);
+                console.log(`%c ${messages[randomIndex]}`, 'color: green; font-weight:bold;');
+            }
+
+            function welcome() {
                 var randomIndex = Math.round(Math.random() * messages.length);
                 console.log(`%c ${messages[randomIndex]}`, 'color: green; font-weight:bold;');
             }
 
             function myname() {
                 console.log("My name is Billy!");
+            }
+
+            function calculateStats(month) {
+                $('#stats').text('Statistics for ' + month);
             }
 
             // Add Commands
@@ -38,6 +58,21 @@
 
         }
     </script>
+    <div class="position-relative">
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <h2 style="font-size:55px;color: #00c5a4;align-self:center;margin-top:360px"> foodOS </h2>
+            <p style="color: #00c5a4;
+            font-size:18;
+            font-style:italic;
+            margin: auto;
+
+            padding: 10px;">
+                Simply a Super Bot 🐱‍🏍
+            </p>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
