--- a/public/index.html
+++ b/public/index.html
@@ -292,6 +292,12 @@
                 <div id="carouselExampleControls" class="carousel slide" data-interval="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
+                            <img class="d-block w-100" src="./images/one.png" alt="Zero slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/two.png" alt="Zeroone slide">
+                        </div>
+                        <div class="carousel-item">
                             <img class="d-block w-100" src="./images/dummy1.png" alt="First slide">
                         </div>
                         <div class="carousel-item">
