added pitch desks

--- a/public/index.html
+++ b/public/index.html
@@ -230,8 +230,9 @@
             <!-- <h6 class="font-weight-normal text-muted pb-3 mt-4 ">FoodOS is based on hyper-local on-demand food/grocery delivery SaaS platform, wherein Restaurants/Supermarket pay to use foodos's services </h6> -->
             <h6 class="font-weight-normal text-muted pb-3 mt-4 ">FoodOS is SaaS based hyper-local on-demand food/grocery delivery platform.</h6>
             <div>
-                <button class="btn btn-opacity-light mr-1 ">Demo</button>
-                <button class="btn btn-opacity-success ml-1 ">Explain</button>
+                <a href="./Desk1.pdf" download="proposed_file_name" class="btn btn-opacity-light mr-1">Download Pitch Desk</a>
+                <!-- <button class="btn btn-opacity-light mr-1 ">Demo</button> -->
+                <button class="btn btn-opacity-success ml-1">Explain</button>
             </div>
             <img src="images/Group171.svg " alt=" " class="img-fluid ">
         </div>
@@ -325,7 +326,7 @@
 
 
 
-            <section class="digital-marketing-service " id="digital-marketing-section ">
+            <section class="digital-marketing-service " id="digital-marketing-section " style="margin-bottom: 25px;">
                 <div class="row align-items-center ">
                     <div class="col-12 col-lg-7 grid-margin grid-margin-lg-0 " data-aos="fade-right ">
                         <h3 class="m-0 ">Tragetted advertisment<br> for brand establishment and product reach-out!</h3>
@@ -338,7 +339,7 @@
                         <img src="images/Group1.png " alt=" " class="img-fluid ">
                     </div>
                 </div>
-                <div class="row align-items-center ">
+                <!-- <div class="row align-items-center ">
                     <div class="col-12 col-lg-7 text-center flex-item grid-margin " data-aos="fade-right ">
                         <img src="images/Group2.png " alt=" " class="img-fluid ">
                     </div>
@@ -350,13 +351,13 @@
                         </div>
                         <button class="btn btn-info ">Readmore</button>
                     </div>
-                </div>
+                </div> -->
             </section>
             <section class="case-studies " id="case-studies-section">
                 <div class="row grid-margin ">
                     <div class="col-12 text-center pb-5 ">
                         <h2>Our case studies</h2>
-                        <h6 class="section-subtitle text-muted ">Lorem ipsum dolor sit amet, tincidunt vestibulum.</h6>
+                        <h6 class="section-subtitle text-muted ">Food Delivery Case Study</h6>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 stretch-card mb-3 mb-lg-0 " data-aos="zoom-in ">
                         <div class="card color-cards ">
@@ -367,14 +368,15 @@
                                     </div>
                                     <div class="card-desc-box d-flex align-items-center justify-content-around ">
                                         <div>
-                                            <h6 class="text-white pb-2 px-3 ">Know more about Online marketing</h6>
-                                            <button class="btn btn-white ">Read More</button>
+                                            <h6 class="text-white pb-2 px-3 ">Know more about the Study</h6>
+                                            <a class="btn btn-white" href="./ThambiService.pdf" download="proposed_file_name">Read Me</a>
+
                                         </div>
                                     </div>
                                 </div>
                                 <div class="card-details text-center pt-4 ">
-                                    <h6 class="m-0 pb-1 ">Voice Based Services</h6>
-                                    <p>Seo, Marketing</p>
+                                    <h6 class="m-0 pb-1 ">Case Study on Thambi Service</h6>
+                                    <p>Thambi Service, Pollachi</p>
                                 </div>
                             </div>
                         </div>
