--- a/public/index.html
+++ b/public/index.html
@@ -381,7 +381,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3 stretch-card mb-3 mb-lg-0 " data-aos="zoom-in " data-aos-delay="200 ">
+                    <!-- <div class="col-12 col-md-6 col-lg-3 stretch-card mb-3 mb-lg-0 " data-aos="zoom-in " data-aos-delay="200 ">
                         <div class="card color-cards ">
                             <div class="card-body p-0 ">
                                 <div class="bg-warning text-center card-contents ">
@@ -443,7 +443,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <!-- <section class="customer-feedback " id="feedback-section ">
